[package]
name = "wndsize"
version = "0.1.0"
authors = ["lmdslyngl <lmdslyngl0315@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"

[dependencies.winapi]
version = "0.3"
features = ["winuser"]
